# ssm-einfo-scrapy

./: .gitignore  docs.txt  page.html  pyproject.toml  scrapy.cfg
src/crawlers/ssm_einfo/: harvesters.py  items.py  middlewares.py  pipelines.py  settings.py  spiders.py
src/fire_ant/: aio.py  cli.py  logging.py  pipeline.py
