[tool.poetry]
name = "ssm-malaysia"
version = "0.1.0"
description = ""
authors = ["ashikshezan <ashikshezan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
